added new js with jquery

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
 
 <body>
-    <div class="nav"></div>
+    <div class="nav">
+        <p>This List is made at Randome so stop crying</p>
+    </div>
 
     <div class="container">
         <div class="inside">
+
             <div class="display">
 
+                <div id="target"></div>
 
+                <p>Below you will find the generated names please use the copy button to copy the list over.</p>
 
+                <button onclick="generate()" class="btn">Copy Cry Babies Names</button>
 
                 <!-- bottom of display -->
             </div>
